Open up JPMS module required by configuration cache
And remove illegal-access=deny - it does not help in this case
as quite a few tests with older external tool versions break.